--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>About Me</title> 
 </head>
 
 <body>
-    <h1><font color="red" size="10">Vidyashree Tarikere</font> </h1>
-    <h4><font size="4">_Just do it_</font> <br></h4>
+    <h1>Vidyashree Tarikere</h1>
+    <h4><em>Just do it</em></h4>
     <img src="MyImage.jpg" alt="My Image">
 
     <p><strong><em>"Trying to do it"</em></strong></p> 
 
 <p>About Me</p>
-<table border="1">
+<table>
     <tr>
         <td>Birthday</td>
         <td>16th Of April</td>
@@ -20,7 +21,7 @@
 
     <tr>
         <td>Favorite Color</td>
-        <td><font color="blue">Blue</font></td>
+        <td>Blue</td>
     </tr>
 
     <tr>
@@ -45,21 +46,27 @@
 </table> 
 
 <h4>My hobbies are:</h4>
+    <ul><li>
     <ul>
        <li>Cooking</li> 
+       <li>
        <ul>
            <li>Indian</li>
            <li>Italian</li>
        </ul>
+       </li>
        <li>Experiments with makeup </li>
        <li> Learning something on YouTube.com</li>
-        <ul>
+       <li> 
+       <ul>
             <li> New Tech(like googleTechTalks, AppleRelease)</li>
             <li>Watching Documentaries </li>
         </ul>
+        </li>
     </ul>
+    </li></ul>
 
-<h4><p>You can always count on me for opening the door as I have the badge. P.S. I have because I live nearby. Yet to earn it**</p></h4>
+<h4>You can always count on me for opening the door as I have the badge. P.S. I have because I live nearby. Yet to earn it</h4>
 
 <h4><em>I would like to contribute with the theory behind the stuff we code like, say, how memory works.</em></h4>
 
@@ -70,10 +77,8 @@
 <h4>TL;DR</h4>
 <p>The story was not really funny.</p>
 
-<p>
-<a href = "https://github.com/ValerieVR/markdown-challenge">Valerie Van Renne</a>
+<a href = "https://github.com/ValerieVR/markdown-challenge"> &lt;&lt;Valerie Van Renne </a>
 <p>Vidyashree Tarikere</p>
-<a href="https://github.com/WendyStoop/markdown-challenge">Wendy Stoop</a>
-</p>
+<a href="https://github.com/WendyStoop/markdown-challenge">Wendy Stoop&gt;&gt; </a>
 </body>
 </html>
